@@ -100,6 +100,15 @@ $TX_COMMUNITY = array(
 						'index'
 					),
 					'defaultAction' => 'index'
+				),
+				'lastVisitorsLogger' => array(
+					'classReference' => 'EXT:community/controller/userprofile/class.tx_community_controller_userprofile_lastvisitorsloggerwidget.php:tx_community_controller_userprofile_LastVisitorsLoggerWidget',
+					'label' => 'LLL:EXT:community/lang/locallang_applications.xml:userProfile_lastVisitorsLogger',
+					'accessControl' => false,
+					'actions' => array(
+						'index'
+					),
+					'defaultAction' => 'index'
 				)
 /*
 				'wall' => array(
