@@ -16,7 +16,8 @@
 			<label index="userProfile_friendsBirthdayList">Friends Birthday List</label>
 			<label index="userProfile_myGroups">My Groups</label>
 			<label index="userProfile_onlineFriends">Online Friends</label>
-			<label index="userProfile_lastVisitors">Last Profile Visitors</label>
+			<label index="userProfile_lastVisitors">Last Profile Visitors (Viewer)</label>
+			<label index="userProfile_lastVisitorsLogger">Last Profile Visitors (Logger)</label>
 			<label index="userProfile_widget">Widgets-Widget</label>
 			<label index="groupProfile">Group Profile</label>
 			<label index="groupProfile_image">Image</label>
